# libblinkstick

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libblinkstick.pc.cmakein  libblinkstick.pc.in  libtool
cmake/: FindHIDAPI.cmake  libblinkstickConfig.cmake.in
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  libblinkstick_8h.html  libblinkstick_8h_source.html  menudata.js  structarguments-members.html  structarguments.html  structblinkstick__color-members.html  structblinkstick__color.html  structblinkstick__device-members.html  structblinkstick__device.html  structrgb__color-members.html  structrgb__color.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  typedefs_1.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  libblinkstick_8h.tex  libblinkstick_8h_source.tex  refman.tex  structarguments.tex  structblinkstick__color.tex  structblinkstick__device.tex  structrgb__color.tex
example/: Makefile  Makefile.am  Makefile.in  blinkstick.c
script/: bootstrap  build  test
seatest/: CMakeLists.txt
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.am  Makefile.in  autogen.sh  blinkstick  blinkstick.c  libblinkstick.c  libblinkstick.h  rgb.c  rgb.h
test/: CMakeLists.txt  CTestTestfile.cmake  blinkstick_tests  blinkstick_tests.c  blinkstick_tests.cc  libblinkstick_test.c  minunit.h  unit_tests
tests/: Makefile  Makefile.am  Makefile.in  blinkstick_tests  blinkstick_tests.c  check_blinkstick_tests  libblinkstick_test.c
tests/.libs/: blinkstick_tests
